--- a/Tower Defence/Packages/manifest.json
+++ b/Tower Defence/Packages/manifest.json
@@ -6,8 +6,14 @@
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.rider": "1.1.0",
     "com.unity.ide.visualstudio": "1.0.11",
-    "com.unity.ide.vscode": "1.1.0",
+    "com.unity.ide.vscode": "1.1.2",
+    "com.unity.mathematics": "1.1.0",
     "com.unity.mobile.notifications": "1.0.3",
+    "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.polybrush": "1.0.1",
+    "com.unity.probuilder": "4.0.5",
+    "com.unity.progrids": "3.0.3-preview.4",
+    "com.unity.scriptablebuildpipeline": "1.5.2",
     "com.unity.test-framework": "1.0.18",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.1.0",
