--- a/Tower Defence/Packages/manifest.json
+++ b/Tower Defence/Packages/manifest.json
@@ -18,6 +18,7 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.1.0",
     "com.unity.ugui": "1.0.0",
+    "com.unity.ui.builder": "0.8.2-preview",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
